tests/errors/syntax.EmptyLiteral.res
>> Syntax | File: syntax.EmptyLiteral.art
    error | Line: 2
          | 
          | empty literal value
          | 
          | near: lit: '
          |             ^